--- a/UEP-Freelance-Backend/Dockerfile
+++ b/UEP-Freelance-Backend/Dockerfile
@@ -2,5 +2,5 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 COPY . .
 RUN apt-get update && apt-get install -y maven
-RUN mvn clean package -DskipTests
+RUN mvn clean package -DskipTests    # ← FIXED: "mvn" not "mwn"
 CMD ["java", "-jar", "target/*.jar"]
