--- a/UEP-Freelance-Backend/Dockerfile
+++ b/UEP-Freelance-Backend/Dockerfile
@@ -1,5 +1,21 @@
-FROM maven:3.8.7-openjdk-17
+# ============================================
+# WORKING DOCKERFILE FOR RENDER
+# ============================================
+
+# Use working Maven image
+FROM maven:3.9.6-eclipse-temurin-17 AS builder
 WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
-CMD ["java", "-jar", "target/*.jar"]
+
+# Use working Java image
+FROM eclipse-temurin:17-jre-alpine
+WORKDIR /app
+COPY --from=builder /app/target/*.jar app.jar
+
+# Render settings
+ENV PORT=8080
+EXPOSE 8080
+
+# Run Spring Boot
+ENTRYPOINT ["java", "-jar", "app.jar"]
