Refactor Dockerfile for clarity and consistency

--- a/UEP-Freelance-Backend/Dockerfile
+++ b/UEP-Freelance-Backend/Dockerfile
@@ -1,21 +1,11 @@
-# ============================================
-# WORKING DOCKERFILE FOR RENDER
-# ============================================
-
-# Use working Maven image
-FROM maven:3.9.6-eclipse-temurin-17 AS builder
+FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 COPY . .
 RUN mvn clean package -DskipTests
 
-# Use working Java image
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:17-alpine
 WORKDIR /app
-COPY --from=builder /app/target/*.jar app.jar
-
-# Render settings
+COPY --from=build /app/target/*.jar app.jar
 ENV PORT=8080
 EXPOSE 8080
-
-# Run Spring Boot
 ENTRYPOINT ["java", "-jar", "app.jar"]
